--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,8 @@ langchain-core==0.3.0
 langchain-openai==0.2.0
 flask==3.0.3
 sentence-transformers==4.1.0
-pypdf==5.6.1
-python-dotenv==1.1.0
+pypdf
+python-dotenv==1.0.1
 langchain-pinecone==0.1.3
 langchain-google-genai==2.0.0
 -e .
